src/style.css
:root {
    --blue: #0e38de;
    --violet: #C63BFA;
    --white: #ffffff;
    --background-color: #310e3d;
    --background-body: #310e3d;
}
* {
    font-family: Arial, Helvetica, sans-serif;
    font-weight: normal;
    text-transform: capitalize;
    text-decoration: none;
    outline: none;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background-color: var(--background-color);
    color: var(--white);
}
*::selection {
    background: var(--blue);
    color: #fff;
}
html::-webkit-scrollbar {
    width: 1rem;
}
html::-webkit-scrollbar-track {
    background: #444;
}
html::-webkit-scrollbar-thumb {
    background: var(--main-color);
    border-radius: 5rem;
}
html {
    font-size: 62.5%;
    overflow: hidden;
}
body {
    background-color: var(--background-body);
}
#container {
    width: 70%;
    max-width: 780px;
    height: 100vh;
    margin: 0 auto;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}
.header {
    position: fixed;
    top: 0; left: 0; right: 0;
    z-index: 10000;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1.5rem 9%;
}
.header .logo {
    font-size: 2.5rem;
}
.header .navbar a {
    font-size: 1.7rem;
    color: #fff;
    margin-left: 2rem;
}
.header .navbar a:hover {
    background: var(--blue);
    padding: .2rem;
}
#menu-bars {
    font-size: 3rem;
    color: #fff;
    cursor: pointer;
    display: none;
}
main {
    width: 100%;
    padding-top: 25rem;
    margin: 6rem auto;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}
.title h1 {
    align-items: center;
    justify-content: center;
    font-size: 5rem;
    margin: 2rem auto;
    text-align: center;
}
.title .subtitle {
    text-align: center;
    margin: 3rem auto;
    font-size: 16px;
    color: var(--blue);
}
main .title:hover {
    letter-spacing: .2rem;
}
.footer {
    width: 100%;
    margin: 0 auto;
    text-align: center;
    color: white;
    margin-top: 8vh;
    position: relative;
}
.footer .icons {
    margin-bottom: 20px;
}
.footer a {
    color: white;
    font-size: 16px;
    margin-bottom: 20px;
    margin-left: 2rem;
}
.footer a:hover {
    background: var(--blue);
    letter-spacing: .5rem;
}
.credit {
    text-align: center;
    font-size: 16px;
}
span {
    color: var(--blue);
}
/* 👇👇👇👇👇  media queries 👇👇👇👇👇 */
@media (max-width: 991px) {
    html {
        font-size: 55%;
    }
    .header {
        padding: 1.5rem 2rem;
    }
}
@media (max-width: 768px) {
    #menu-bars {
        display: initial;
    }
    .header .navbar {
        position: absolute;
        top: 100%; left: 0; right: 0;
        border-top: .1rem solid #222;
        background: var(--background-color);
        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
    }
    .header .navbar.active {
        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
    }
    .fa-times {
        transform: rotate(180deg);
    }
    .header .navbar a{
        display: block;
        background: var(--background-color);
        border-radius: .5rem;
        padding: 1.3rem;
        margin: 1rem auto;
        font-size: 2rem;
        text-align: center;
    }
    .title h1 {
        align-items: center;
        justify-content: center;
        font-size: 3rem;
        margin: 6rem auto;
        text-align: center;
    }
    .home .content h3 {
        font-size: 4rem;
    }
}
/*  👇👇👇👇👇 media queries 👇👇👇👇👇 */
@media (max-width: 450px) {
    html {
        font-size: 50%;
    }
    .home .home-slider .swiper-slide {
        width: 27rem;
    }
}

